
Release 5.2.2 (unreleased)
==========================

Bug fixes
---------

- Fix CGNS files with NFACE_n elements and multiple sections.

- Mesh extrusion: various robustness improvements.

- GUI reader: fix for cases with multiple mapped inlets.

- Work around possible Intel icc compiler bug in least-squares vector
  gradient (observed on v6.0 with icc 18.0.1 20171018).

- Avoid opening residuals.csv from all ranks.

- Fix for time moment which start is defined by a time value equal or close to
  a time step value.

- Fix bug in wall distance initialization for restarts with k-omega SST model.

- Fix memory leaks in parameters check.

- Fix in GUI for gas combustion model. Use variable name instead of label to get
  numerical scheme.

- Fix in GUI of turbulence model view initalization by moving out of
  turbulence model slot the view initalization code.

- Fix in TVD convective schemes in parallel mode.

- Fix crash when using multiple GUI-defined scalar balance zones.

- Fix memory leak leading to crash in legacy porosity model.

- Lagrangian Module:
  * Fix crash in restart when not reading previous statistics.
  * Fix errors in deposition/reentrainment model.
  * Fix division by 0 in boundary stats.

- Lagrangian Module: fix crash in some cases with no deposition model.

- Fix missing free surface boundary movement in some cases depending on
  which pages were visited in the GUI (GitHub issue #27).

- Fix bug in automatic turbulent BCs. They were only set if not already
  initialized. Cases calling turbulent_bc_inlet_k_eps in user sources to
  overwrite GUI settings were impacted.

- Fix coherency check of slope test indicator with SIMPLE algorithm.

- Compressible: fix density time scheme in transported passive scalar/vector
  balance to ensure conservativity with compressible algorithm.

- Avoid error preventing run when checking remaining time using SLURM job array.

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.
